# polePositionCRKZCY

./: .gitignore  CMakeLists.txt  README.md  client  client.c  server.c
C/: CMakeLists.txt  server.c
C/Game/: .Server-main.c.swp  CMakeLists.txt  Juego.c  Juego.h  ListaEnlazada.c  ListaEnlazada.h  ListaEnlazadaColisionables.c  ListaEnlazadaColisionables.h  Server-main.c  Server.c  Server.h  WriteJSON.c  WriteJSON.h  main.cpp
C/Server/: CMakeLists.txt
C/Server/json/: writejson.c
Java/: Client.java
polePositionGUI/src/: GameScreen.java  Start.java
polePositionGUI/src/GameObjects/: Camera.java  Car.java  Drawable.java  Pista.java  Static.java
polePositionGUI/src/Screens/: GameScreen.java  Punto.java  Segment.java
polePositionGUI/src/jsonObjects/: initMsg.java  mainPruebaJackson.java  midGameMsg.java
polePositionGUI/src/logic/: Client.java  MyAnimationTimer.java
polePositionGUI/src/pseudo3dRacing/: RoadAppMain.java
